# pyxtermjs

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  makefile  noxfile.py  pyproject.toml  requirements.in  requirements.txt  setup.py
pyxtermjs/: __main__.py  app.py  error.html  index.html
